--- a/themes/backendbrasil/layout/vagas.hbs
+++ b/themes/backendbrasil/layout/vagas.hbs
@@ -19,16 +19,18 @@
   <article class="tile tile-is-flexible is-child is-flex-full no-grow no-shrink">
     <div class="select">
       <select name="state" id="state">
+        <option value="clear">{{__ 'jobs.form.state'}}</option>
         {{#each theme.states}}
-        <option value="{{this}}">{{this}}</option>
+          <option value="{{this}}">{{this}}</option>
         {{/each}}
       </select>
     </div>
 
     <div class="select">
       <select name="language" id="language">
+        <option value="clear">{{__ 'jobs.form.lang'}}</option>
         {{#each theme.languages}}
-        <option value="{{this}}">{{this}}</option>
+          <option value="{{this}}">{{this}}</option>
         {{/each}}
       </select>
     </div>
@@ -40,6 +42,12 @@
         <i class="fas fa-search"></i>
       </span>
     </div>
+
+    <div class="control">
+      <a href="javascript:void(0);" id="clearFilter" class="jobs--form-clear button">
+        {{__ 'jobs.form.clear'}}
+      </a>
+    </div>
   </article>
 </section>
 
@@ -49,32 +57,6 @@
   </article>
 
   <article id="jobsListingWrapper" class="tile is-flex-full tile-is-flexible is-parent jobs--listing-wrapper">
-    {{#each site.posts}}
-      <article class="
-        jobs--listing-item 
-        no-grow 
-        no-shrink 
-        is-child tile 
-        is-flex-one-quarter-desktop
-        is-flex-half-mobile
-        is-flex-full
-      ">
-        <a href="http://www.url.com" target="_blank">
-          <h4 class="is-size-5">Desenvolvedor NodeJS</h4>
-
-          <ul class="jobs--flags">
-            <li>Pleno</li>
-            <li>CLT</li>
-            <li>Remoto</li>
-          </ul>
-
-          <p>
-            <span class="fas fa-place"></span>
-            <span>Curitiba / SP</span>
-          </p>
-        </a>
-      </article>
-    {{/each}}
   </article>
 
   <article class="tile is-flex-full jobs--listing-load">
