fix article header image

--- a/themes/backendbrasil/layout/article.hbs
+++ b/themes/backendbrasil/layout/article.hbs
@@ -1,4 +1,4 @@
-<section class="article--header tile tile-is-flexible is-ancestor" style="background-image: url();">
+<section class="article--header tile tile-is-flexible is-ancestor" style="background-image: url({{page.thumbnail}});">
   <article class="article--header-title is-child tile is-flex-full">
     <h2 class="is-size-2">{{page.title}}</h2>
   </article>
