--- a/themes/backendbrasil/assets/styles/article.scss
+++ b/themes/backendbrasil/assets/styles/article.scss
@@ -1,4 +1,32 @@
-.article--header {}
+.article--header {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  z-index: 0;
+
+  article {
+    z-index: 10;
+    padding: 10rem 5rem;
+    text-align: center;
+
+    h2 {
+      color: #fff;
+      font-weight: bold;
+    }
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, 0.5);
+  }
+}
 
 .article {
   &--content,
