fix newsletter for mobile

--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -1,5 +1,5 @@
 <section class="newsletter tile is-ancestor tile-is-flexible">
-  <article class="tile is-flex-half is-flex-full-mobile">
+  <article class="tile is-flex-half-mobile is-flex-full">
     <div>
       <h4 class="is-size-4 has-text-weight-bold">
         {{__ 'newsletter.title'}}
@@ -9,7 +9,7 @@
     </div>
   </article>
 
-  <article class="tile is-flex-half is-flex-full-mobile">
+  <article class="tile is-flex-half-mobile is-flex-full">
     <form action="https://backendbrasil.us19.list-manage.com/subscribe/post?u=95332e1cc29906df595faebdf&amp;id=bdac6264e8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate class="field is-grouped">
       <p class="control no-grow no-shrink is-expanded">
         <input class="input" type="text" placeholder="{{__ 'email_placeholder'}}" name="EMAIL">
