fix home header image fix home events item fix styled headers and titles fix footer for mobile

--- a/themes/backendbrasil/assets/styles/components.scss
+++ b/themes/backendbrasil/assets/styles/components.scss
@@ -11,8 +11,13 @@
 }
 
 %backendbr-styled-title {
+  text-align: center;
   font-weight: bold;
   color: $text;
+
+  @media screen and (min-width: $tablet) {
+    text-align: left;
+  }
 }
 
 %color-inherit {
