--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -36,12 +36,12 @@
  
 
 <footer class="footer tile is-ancestor tile-is-flexible has-default-padding">
-  <article class="tile is-flex-half is-flex-full-mobile">
+  <article class="tile is-flex-half-mobile is-flex-full">
     <img src="{{imgsrc 'Logo-Horizontal.png'}}" width="200"/>
     <p>{{__ 'footer.copyright'}}</p>
   </article>
 
-  <article class="tile is-flex-half is-flex-full-mobile">
+  <article class="tile is-flex-half-mobile is-flex-full">
     <nav class="navbar footer-links">
       <div class="navbar-menu">
         <a href="/quem-somos" class="has-text-weight-bold navbar-item">{{__ 'footer.about'}}</a>
