--- a/themes/backendbrasil/layout/partials/post.hbs
+++ b/themes/backendbrasil/layout/partials/post.hbs
@@ -18,7 +18,7 @@
   "
   >
   <div class="posts--thumbnail">
-    <a href="{{path}}" title="{{title}}">
+    <a href="/{{path}}" title="{{title}}">
       <img src="{{thumb path thumbnail}}" alt="{{thumbnail_alt}}"/>
     </a>
   </div>
@@ -32,10 +32,10 @@
   </ul>
 
   <h4 class="posts--title has-text-weight-semibold is-size-5">
-    <a href="{{path}}" title="{{title}}">
+    <a href="/{{path}}" title="{{title}}">
       {{title}}
     </a>
   </h4>
 
-  <p class="posts--p"><a href="{{path}}" title="{{description}}">{{description}}</a></p>
+  <p class="posts--p"><a href="/{{path}}" title="{{description}}">{{description}}</a></p>
 </article>
