--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -68,11 +68,12 @@
       }
 
       input {
-        width: 15rem;
+        width: 17rem;
         height: 100%;
         border-radius: $radius;
         border: solid $border-color 0.1rem;
         padding-left: 2.5rem;
+        font-size: 1rem;
       }
 
       @media screen and (min-width: $tablet) {
