patch jobs page header

--- a/themes/backendbrasil/layout/vagas.hbs
+++ b/themes/backendbrasil/layout/vagas.hbs
@@ -1,6 +1,9 @@
 <section class="jobs--header tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-two-thirds no-grow no-shrink">
-    <h4 class="is-size-3 has-text-weight-bold">{{{__ 'jobs.header.title'}}}</h4>
+    <h4 class="is-size-3">
+      {{{__ 'jobs.header.title'}}}
+      <strong>{{__ 'jobs.header.strong'}}</strong>
+    </h4>
   </article>
 </section>
 
