--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -7,11 +7,11 @@
   align-content: center;
   align-items: center;
   position: relative;
-  background-color: rgba(#000, 0.5);
+  background-color: rgba(#000, 0.7);
   justify-content: center;
   text-align: center;
   color: #fff;
-  padding-top: 7rem;
+  padding: 9rem 0 6rem;
 
   strong { color: inherit; }
 
@@ -27,6 +27,7 @@
     content: "";
     background-image: url('/img/meetup0.jpg');
     background-size: cover;
+    background-position: center center;
     width: 100%;
     height: 100%;
     position: absolute;
