--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -38,7 +38,9 @@
       <a href="/blog" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.blog'}}</a>
       <a href="http://github.com/{{config.github}}" target="_blank" class="navbar-item has-text-weight-semibold be--navbar-item--join">
         <span class="icon"><i class="fab fa-github fa-lg"></i></span>
-        {{__ 'menu.join'}}
+        <span>
+          {{__ 'menu.join'}}
+        </span>
       </a>
     </div>
   </div>
