--- a/themes/backendbrasil/assets/styles/buttons.scss
+++ b/themes/backendbrasil/assets/styles/buttons.scss
@@ -2,6 +2,7 @@
   .button {
     margin-right: 1rem;
     margin-bottom: 1rem;
+    border-color: transparent;
 
     i { padding-right: 0.5rem; }
 
