breadcrumb only for blog

--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -17,7 +17,7 @@
     </a>
   </div>
 
-  {{#if page.id}}
+  {{#if page.breadcrumb}}
     <div class="
         navbar--breadcrumb
         {{#eq page.path "index.html"}}
