--- a/themes/backendbrasil/assets/styles/home.scss
+++ b/themes/backendbrasil/assets/styles/home.scss
@@ -1,17 +1,3 @@
-%home-bg {
-  $bg-start-color: rgba(80,52,155,1);
-  $bg-middle-color: rgba(88,100,225,1);
-  $bg-end-color: rgba(91,115,249,1);
-  background: $bg-start-color;
-  background: -moz-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, $bg-start-color), color-stop(59%, $bg-middle-color), color-stop(100%, $bg-end-color));
-  background: -webkit-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
-  background: -o-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
-  background: -ms-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
-  background: linear-gradient(to right, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50349b', endColorstr='#5b73f9', GradientType=1 );
-}
-
 %home-bg-clip {
   $right-bottom: 100% 25%;
   $left-bottom: 0% 60%;
@@ -21,7 +7,7 @@
 
 .home-header {
   @extend %has-default-padding;
-  @extend %home-bg;
+  @extend %gradient-bg;
   background-color: transparent;
   padding-top: 7rem;
   padding-bottom: 5rem;
@@ -85,7 +71,7 @@
     left: 0;
     z-index: -10;
 
-    @extend %home-bg;
+    @extend %gradient-bg;
     @extend %home-bg-clip;
   }
 
