--- a/themes/backendbrasil/assets/styles/home.scss
+++ b/themes/backendbrasil/assets/styles/home.scss
@@ -63,6 +63,7 @@
   @extend %has-default-padding;
   position: relative;
   overflow: hidden;
+  justify-content: flex-start;
 
   &:before {
     content: "";
@@ -88,6 +89,8 @@
   }
 
   .project {
+    @include generate-post-margin($tablet, 3);
+    @include generate-post-margin($desktop, 4);
     align-content: stretch;
     flex-flow: column;
 
@@ -116,7 +119,7 @@
       background-color: rgba($primary, 0.15);
       border-radius: $radius-rounded;
       font-size: 1.25rem;
-      flex-basis: 3rem;
+      flex: 0 0 3rem;
       height: 3rem;
       display: inline-flex;
       justify-content: center;
