--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -106,7 +106,9 @@
 
       <p>
         <i class="fas fa-map"></i>
-        {{address}}
+        <span>
+          {{address}}
+        </span>
       </p>
 
       <p>
