--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -75,6 +75,10 @@
         border: solid $border-color 0.1rem;
         padding-left: 2.5rem;
         font-size: 1rem;
+
+        &:focus {
+          outline: unset;
+        }
       }
 
       @media screen and (min-width: $tablet) {
