--- a/themes/backendbrasil/assets/styles/about.scss
+++ b/themes/backendbrasil/assets/styles/about.scss
@@ -2,7 +2,9 @@
   align-content: center;
   align-items: center;
   position: relative;
-  background-color: rgba(#000, 0.5);
+  background-image: url('/img/about.jpg');
+  background-size: cover;
+  background-position: center center;
   justify-content: center;
   text-align: center;
   color: #fff;
@@ -12,6 +14,7 @@
 
   article {
     padding: 4rem 0;
+    z-index: 2;
   }
 
   p { 
@@ -20,14 +23,15 @@
 
   &:before {
     content: "";
-    background-image: url('/img/meetup0.jpg');
-    background-size: cover;
+    @extend %gradient-bg;
+    background-color: transparent;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -9999;
+    z-index: 1;
+    opacity: 0.7;
   }
 }
 
