--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -7,7 +7,9 @@
   align-content: center;
   align-items: center;
   position: relative;
-  background-color: rgba(#000, 0.7);
+  background-image: url('/img/jobs.jpg');
+  background-size: cover;
+  background-position: center center;
   justify-content: center;
   text-align: center;
   color: #fff;
@@ -16,6 +18,7 @@
   strong { color: inherit; }
 
   article {
+    z-index: 2;
     padding: 4rem 0;
   }
 
@@ -25,15 +28,15 @@
 
   &:before {
     content: "";
-    background-image: url('/img/meetup0.jpg');
-    background-size: cover;
-    background-position: center center;
+    @extend %gradient-bg;
+    background-color: transparent;
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -9999;
+    z-index: 1;
+    opacity: 0.7;
   }
 }
 
