--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -59,20 +59,21 @@
     div {
       $border-color: rgba($primary, 0.4);
       border-color: $border-color;
+      margin-right: 2rem;
       flex: 0 0 100%;
+
+      select { width: 100%; }
 
       select, a {
         border-color: inherit;
       }
 
-      a { 
-        margin-left: 1rem;
-
-        &:hover { border-color: $border-color; }
+      a:hover { 
+        border-color: $border-color;
       }
 
       input {
-        width: 17rem;
+        width: 100%;
         height: 100%;
         border-radius: $radius;
         border: solid $border-color 0.1rem;
@@ -82,17 +83,25 @@
         &:focus {
           outline: unset;
         }
-      }
 
-      @media screen and (min-width: $tablet) {
-        flex-basis: auto;
-
-        &:nth-child(2) {
-          margin: 0 1rem;
+        @media screen and (min-width: $tablet) {
+          width: 17rem;
         }
       }
 
       &.control span { color: $primary !important; }
+
+      @media screen and (min-width: $tablet) {
+        flex-basis: auto;
+      }
+
+      @media screen and (max-width: $desktop) {
+        margin-bottom: 1rem;
+
+        input[type="text"] { height: 2.25rem; }
+        
+        &:last-child { text-align: center; }
+      }
     }
   }
 }
