--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -26,7 +26,7 @@
         </div>
       </p>
 
-      <p class="control no-grow no-shrink">
+      <p class="control no-grow no-shrink newsletter--btn">
         <input type="submit" value="{{__ 'sign'}}" class="button has-text-weight-bold is-info">
       </p>
     </form>
