patches for article

--- a/themes/backendbrasil/assets/styles/article.scss
+++ b/themes/backendbrasil/assets/styles/article.scss
@@ -47,6 +47,11 @@
   &--comments,
   &--related {
     justify-content: center;
+
+    @media screen and (max-width: $tablet) {
+      padding-left: 3rem;
+      padding-right: 3rem;
+    }
   }
 }
 
