--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -1,4 +1,4 @@
-<section class="home-header tile tile-is-flexible">
+<section class="home-header tile tile-is-flexible is-ancestor">
   <article class="tile is-child is-flex-full no-grow no-shrink is-flex-half-mobile home-header--logo">
     <img src="{{imgsrc 'logo.svg'}}" alt="Logo BackEndBrasil"/>
   </article>
