standardize titles and margin

--- a/themes/backendbrasil/assets/main.scss
+++ b/themes/backendbrasil/assets/main.scss
@@ -8,7 +8,8 @@ $family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", 
 @import 'styles/components.scss';
 @import 'styles/buttons.scss';
 
-body > section {
+body > section,
+body > footer {
   @extend %default-padding;
 }
 
