--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -125,7 +125,7 @@
 
 <section class="posts tile-is-flexible tile is-ancestor">
   <article class="tile is-flex-full">
-    <h2 class="title">{{_p 'home.follow_blog'}}</h2>
+    <h2>{{_p 'home.follow_blog'}}</h2>
   </article>
 
   <section class="tile tile-is-flexible is-flex-full">
@@ -151,7 +151,7 @@
 <section class="partners tile tile-is-flexible is-ancestor">
   <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="title">{{_p 'home.sponsors'}}</h2>
+      <h2>{{_p 'home.sponsors'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.sponsors}}
@@ -165,7 +165,7 @@
 
   <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="title">{{_p 'home.partners'}}</h2>
+      <h2>{{_p 'home.partners'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.partners}}
