--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -7,7 +7,7 @@
 
 <section class="about--believe tile is-ancestor tile-is-flexible">
   <article class="about--believe-title tile is-child is-flex-full no-grow no-shrink">
-    <h2 class="is-size-4">{{__ 'about.we_believe.title'}}</h2>
+    <h2>{{__ 'about.we_believe.title'}}</h2>
   </article>
 
   <article class="tile is-child is-flex-one-third-mobile is-flex-full no-grow no-shrink">
@@ -47,7 +47,7 @@
 
 <section class="about--team tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-one-third-mobile is-flex-full no-grow no-shrink">
-    <h2 class="is-size-4">{{__ 'about.our_team.title'}}</h2>
+    <h2 class="about--team-title">{{__ 'about.our_team.title'}}</h2>
 
     <p class="text-paragraph">{{__ 'about.our_team.description'}}</p>
   </article>
