--- a/themes/backendbrasil/layout/vagas.hbs
+++ b/themes/backendbrasil/layout/vagas.hbs
@@ -56,7 +56,7 @@
 
 <section class="jobs--listing tile-is-flexible tile is-ancestor">
   <article class="jobs--listing-title tile is-child is-flex-full">
-    <h2 class="title">{{_p 'jobs.opened_jobs'}}</h2>
+    <h2>{{_p 'jobs.opened_jobs'}}</h2>
   </article>
 
   <article id="jobsListingWrapper" class="tile is-flex-full tile-is-flexible is-parent jobs--listing-wrapper">
@@ -78,7 +78,7 @@
 
 <section class="jobs--partners tile-is-flexible tile is-ancestor">
   <article class="jobs--partners-title tile is-child is-flex-full">
-    <h2 class="title">{{_p 'jobs.partners'}}</h2>
+    <h2>{{_p 'jobs.partners'}}</h2>
   </article>
 
   <article class="tile is-child is-flex-full">
