--- a/themes/backendbrasil/assets/styles/jobs.scss
+++ b/themes/backendbrasil/assets/styles/jobs.scss
@@ -1,8 +1,3 @@
-.body--jobs .be--navbar .navbar-item:not(.be--navbar-item--join),
-.navbar--breadcrumb { 
-  color: #fff !important; 
-}
-
 .jobs--header {
   align-content: center;
   align-items: center;
@@ -49,7 +44,7 @@
 }
 
 .jobs--form {
-  @extend %inter-section-margin;
+  @extend %section-margin;
 
   article {
     justify-content: flex-start;
@@ -109,7 +104,7 @@
 }
 
 .jobs--listing {
-  @extend %inter-section-margin;
+  @extend %section-margin;
   justify-content: flex-start;
 
   .jobs--listing-wrapper { justify-content: inherit; }
@@ -118,7 +113,6 @@
 
   &-title h2 {
     @extend %backendbr-styled-title;
-    padding-bottom: 2rem;
   }
 
   &-item {
@@ -196,12 +190,11 @@
 }
 
 .jobs--partners {
-  @extend %inter-section-margin;
+  @extend %section-margin;
   margin-bottom: 4rem !important;
 
   &-title h2 {
     @extend %backendbr-styled-title;
-    padding-bottom: 2rem;
   }
 
   ul {
