--- a/themes/backendbrasil/layout/blog.hbs
+++ b/themes/backendbrasil/layout/blog.hbs
@@ -1,6 +1,6 @@
 <section class="blog--themes tile tile-is-flexible is-ancestor">
-  <article class="tile is-child is-flex-full">
-    <h2 class="title">{{__ 'blog.search_by_categories'}}</h2>
+  <article class="blog--themes-title tile is-child is-flex-full">
+    <h2>{{__ 'blog.search_by_categories'}}</h2>
   </article>
 
   <article class="tile is-child is-flex-full">
@@ -18,8 +18,8 @@
 </section>
 
 <section class="blog--highlights posts tile-is-flexible tile is-ancestor">
-  <article class="tile is-flex-full">
-    <h2 class="title">{{_p 'blog.highlights'}}</h2>
+  <article class="blog--highlights-title tile is-flex-full">
+    <h2>{{_p 'blog.highlights'}}</h2>
   </article>
 
   <section class="tile tile-is-flexible is-flex-full">
@@ -43,8 +43,8 @@
 </section>
 
 <section class="blog--posts posts tile-is-flexible tile is-ancestor">
-  <article class="tile is-flex-full">
-    <h2 class="title">{{_p 'blog.latest'}}</h2>
+  <article class="blog--highlights-title tile is-flex-full">
+    <h2>{{_p 'blog.latest'}}</h2>
   </article>
 
   <section class="tile tile-is-flexible is-flex-full">
